src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception500.java
package org.example.demo_ssr_v1_1._core.errors.exception;

public class Exception500 extends RuntimeException {
    public Exception500(String message) {
        super(message);
    }
}
